--- a/index.html
+++ b/index.html
@@ -101,13 +101,12 @@
 		</div>
   </body>
 	<script>
-		var length = 0, audio = document.getElementById("audio");
+		var length = 0, audio = document.getElementById("audio"), seconds;
 		setInterval(playProgress, 0);
 		function change() {
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
-			length = audio.duration;
 			playing();
 			document.getElementById("playBtn").innerHTML = "Pause";
 		}
@@ -117,7 +116,6 @@
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
-			length = audio.duration;
 			playing();
 			document.getElementById("playBtn").innerHTML = "Pause";
 		}
@@ -129,173 +127,172 @@
 			switch (index) {
 				case 0:
 					artist.innerHTML = "Noisestorm";
-					lenElem.innerHTML = "4:22";
+					length = [4,22];
 					break;
 				case 1:
 					artist.innerHTML = "Kubbi";
-					lenElem.innerHTML = "4:20";
+					length = [4,20];
 					break;
 				case 2: case 15: case 26:
 					artist.innerHTML = "Nitro Fun";
 					if (index == 2) {
-						lenElem.innerHTML = "3:32";
+						length = [3,32];
 					} else if (index == 15) {
-						lenElem.innerHTML = "5:16";
+						length = [5,16];
 					} else if (index == 26) {
-						lenElem.innerHTML = "4:19";
+						length = [4,19];
 					}
 					break;
 				case 3:
 					artist.innerHTML = "Nitro Fun & Hyper Potions";
-					lenElem.innerHTML = "3:43";
+					length = [3,43];
 					break;
 				case 4: case 19: case 34: case 45:
 					artist.innerHTML = "Big Giant Circles";
 					if (index == 4) {
-						lenElem.innerHTML = "3:29";
+						length = [3,29];
 					} else if (index == 19) {
-						lenElem.innerHTML = "5:23";
+						length = [5,23];
 					} else if (index == 34) {
-						lenElem.innerHTML = "4:34";
+						length = [4,34];
 					} else if (index == 45) {
-						lenElem.innerHTML = "3:26";
+						length = [3,26];
 					}
 					break;
 				case 5: case 9: case 22: case 23: case 31: case 40:
 					artist.innerHTML = "Danimal Cannon & Zef";
 					if (index == 5) {
-						lenElem.innerHTML = "4:29";
+						length = [4,29];
 					} else if (index == 9) {
-						lenElem.innerHTML = "6:16";
+						length = [6,16];
 					} else if (index == 22) {
-						lenElem.innerHTML = "5:17";
+						length = [5,17];
 					} else if (index == 23) {
-						lenElem.innerHTML = "4:58";
+						length = [4,58];
 					} else if (index == 31) {
-						lenElem.innerHTML = "8:29";
+						length = [8,29];
 					} else if (index == 40) {
-						lenElem.innerHTML = "4:35";
+						length = [4,35];
 					}
 					break;
 				case 6: case 25:
 					artist.innerHTML = "Bossfight";
 					if (index == 6) {
-						lenElem.innerHTML = "3:26";
+						length = [3,26];
 					} else if (index == 25) {
-						lenElem.innerHTML = "3:07";
+						length = [3,7];
 					}
 					break;
 				case 7:
 					artist.innerHTML = "Silva Hound";
 					document.getElementById("title").innerHTML += " (Murtagh & Veschell Remix)";
-					lenElem.innerHTML = "3:59";
+					length = [3,59];
 					break;
 				case 8: case 11: case 37:
 					artist.innerHTML = "Zef";
 					if (index == 8) {
-						lenElem.innerHTML = "4:33";
+						length = [4,33];
 					} else if (index == 11) {
-						lenElem.innerHTML = "4:01";
+						length = [4,1];
 					} else if (index == 37) {
-						lenElem.innerHTML = "4:58";
+						length = [4,58];
 					}
 					break;
 				case 10: case 16: case 29: case 35: case 39: case 42:
 					artist.innerHTML = "chipzel";
 					if (index == 10) {
-						lenElem.innerHTML = "3:11";
-						document.getElementById("title").innerHTML = " (Super Hexagon - Hexagon)";
+						length = [3,11];
 					} else if (index == 16) {
-						lenElem.innerHTML = "2:42";
-						document.getElementById("title").innerHTML = " (Super Hexagon - Hexagonest)";
+						length = [2,42];
 					} else if (index == 29) {
-						lenElem.innerHTML = "2:36";
-						document.getElementById("title").innerHTML = " (Super Hexagon - Hexagoner)";
+						length = [2,36];
 					} else if (index == 35) {
-						lenElem.innerHTML = "4:00";
+						length = [4,0];
 					} else if (index == 39) {
-						lenElem.innerHTML = "3:13";
+						length = [3,13];
 					} else if (index == 42) {
-						lenElem.innerHTML = "3:52";
+						length = [3,52];
 					}
 					break;
 				case 12:
 					artist.innerHTML = "FantomenK";
-					lenElem.innerHTML = "7:10";
+					length = [7,10];
 					break;
 				case 13:
 					artist.innerHTML = "Excision & Space Laces";
-					lenElem.innerHTML = "4:30";
+					length = [4,30];
 					break;
 				case 14:
 					artist.innerHTML = "Excision & Far Too Loud";
-					lenElem.innerHTML = "5:10";
+					length = [5,10];
 					break;
 				case 17: case 21: case 27:
 					artist.innerHTML = "Shirobon";
 					if (index == 17) {
-						lenElem.innerHTML = "5:17";
+						length = [5,17];
 					} else if (index == 21) {
-						lenElem.innerHTML = "2:41";
+						length = [2,41];
 					} else if (index == 27) {
-						lenElem.innerHTML = "4:28";
+						length = [4,28];
 					}
 					break;
 				case 18:
 					artist.innerHTML = "Lets Be Friends";
-					lenElem.innerHTML = "4:17";
+					length = [4,17];
 					break;
 				case 20:
 					artist.innerHTML = "Tokyo Machine";
-					lenElem.innerHTML = "3:02";
+					length = [3,2];
 					break;
 				case 24:
 					artist.innerHTML = "Danimal Cannon";
-					lenElem.innerHTML = "4:27";
+					length = [4,27];
 					break;
 				case 28: case 41:
 					artist.innerHTML = "Tristam";
 					if (index == 28) {
-						lenElem.innerHTML = "3:46";
+						length = [3,46];
 					} else if (index == 41) {
-						lenElem.innerHTML = "4:30";
+						length = [4,30];
 					}
 					break;
 				case 30:
 					artist.innerHTML = "Shawn Daley";
-					lenElem.innerHTML = "2:55";
+					length = [2,55];
 					break;
 				case 32:
 					artist.innerHTML = "cYsmix";
-					lenElem.innerHTML = "2:21";
+					length = [2,21];
 					break;
 				case 33:
 					artist.innerHTML = "nanobii";
-					lenElem.innerHTML = "2:53";
+					length = [2,53];
 					break;
 				case 36:
 					artist.innerHTML = "PIXL";
-					lenElem.innerHTML = "4:44";
+					length = [4,44];
 					break;
 				case 38:
 					artist.innerHTML = "Sabrepulse";
-					lenElem.innerHTML = "4:50";
+					length = [4,50];
 					break;
 				case 43:
 					artist.innerHTML = "Pegboard Nerds";
-					lenElem.innerHTML = "3:49";
+					length = [3,49];
 					break;
 				case 44:
 					artist.innerHTML = "Plesco";
-					lenElem.innerHTML = "3:47";
+					length = [3,47];
 					break;
 				case 46:
 					artist.innerHTML = "Avenza";
-					lenElem.innerHTML = "3:41";
+					length = [3,41];
 					break;
 			}
 			document.title = document.getElementById("song").value + " by " + artist.innerHTML;
 			document.getElementById("song").selectedIndex = 0;
+			document.getElementById("length").innerHTML = length[0] + ":" + ("0" + length[1]).slice(-2);
+			seconds = (length[0] * 60) + length[1];
 			audio.addEventListener("ended", function() {
 				nextSong();
 			});
@@ -305,7 +302,7 @@
 			var c_m = Math.floor(currentPos / 60);
 			var c_s = Math.floor(currentPos % 60);
 			document.getElementById("currentPos").innerHTML = c_m + ":" + ("0" + c_s).slice(-2);
-			var progress = currentPos / length;
+			var progress = currentPos / seconds;
 			document.getElementById("progress").value = progress;
 		}
 		function toggle() {
