--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		</div>
   </body>
 	<script>
-		var length = 0, audio = document.getElementById("audio"), seconds;
+		var length = 0, audio = document.getElementById("audio");
 		setInterval(playProgress, 0);
 		function change() {
 			audio.src = document.getElementById("song").value + ".mp3";
@@ -290,7 +290,8 @@
 			document.title = artist.innerHTML + " - " + document.getElementById("song").value;
 			document.getElementById("song").selectedIndex = 0;
 			document.getElementById("length").innerHTML = length[0] + ":" + ("0" + length[1]).slice(-2);
-			seconds = (length[0] * 60) + length[1];
+			var seconds = (length[0] * 60) + length[1];
+			document.getElementById("progress").max = seconds;
 			audio.addEventListener("ended", function() {
 				nextSong();
 			});
@@ -300,8 +301,7 @@
 			var c_m = Math.floor(currentPos / 60);
 			var c_s = Math.floor(currentPos % 60);
 			document.getElementById("currentPos").innerHTML = c_m + ":" + ("0" + c_s).slice(-2);
-			var progress = currentPos / seconds;
-			document.getElementById("progress").value = progress;
+			document.getElementById("progress").value = currentPos;
 		}
 		function toggle() {
 			if (audio.paused == false) {
