--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Music Player</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
+		<link rel="icon" href="">
 		<style>
 			select {
 				font-family: Overlock;
@@ -122,6 +123,8 @@
 			var artist = document.getElementById("artist");
 			var index = (document.getElementById("song").selectedIndex) - 1;
 			var lenElem = document.getElementById("length");
+			switch (index) {
+			}
 			switch (index) {
 				case 0:
 					artist.innerHTML = "Noisestorm";
