--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Music Player</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
-		<link rel="icon" href="">
+		<link rel="icon" href="Album-Art/Music Albums/Unknown.jpg" id="album">
 		<style>
 			select {
 				font-family: Overlock;
@@ -33,53 +33,53 @@
 	<body>
 	  <select id="song" onchange="change()">
 			<option>Choose a song to play!</option>
-	    <option value="Barracuda">Barracuda</option>
-	    <option value="Cascade">Cascade</option>
-	    <option value="Cheat Codes">Cheat Codes</option>
-	    <option value="Checkpoint">Checkpoint</option>
-	    <option value="Chip Zeal">Chip Zeal</option>
-	    <option value="Chronos">Chronos</option>
-	    <option value="Commando Steve">Commando Steve</option>
-	    <option value="Cool Friends">Cool Friends</option>
-	    <option value="Core">Core</option>
-	    <option value="Corrupted">Corrupted</option>
-	    <option value="Courtesy">Courtesy</option>
-	    <option value="Cruise Control">Cruise Control</option>
-	    <option value="Dance of the Incognizant">Dance of the Incognizant</option>
-	    <option value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole</option>
-	    <option value="Destroid 8 - Annihilate">Destroid 8 - Annihilate</option>
-	    <option value="Final Boss">Final Boss</option>
-	    <option value="Focus">Focus</option>
-	    <option value="FOX">FOX</option>
-	    <option value="FTW">FTW</option>
-	    <option value="Houston">Houston</option>
-	    <option value="HYPE">HYPE</option>
-	    <option value="Into The Zone">Into The Zone</option>
-	    <option value="Legacy">Legacy</option>
-	    <option value="Logic Gatekeeper">Logic Gatekeeper</option>
-	    <option value="Long Live The New Fresh">Long Live The New Fresh</option>
-	    <option value="Milky Ways">Milky Ways</option>
-	    <option value="New Game">New Game</option>
-	    <option value="On The Run">On The Run</option>
-	    <option value="Once Again">Once Again</option>
-	    <option value="Otis">Otis</option>
-	    <option value="Paper Dolls">Paper Dolls</option>
-	    <option value="Parallel Processing">Parallel Processing</option>
-	    <option value="Peer Gynt">Peer Gynt</option>
-	    <option value="Rainbow Road">Rainbow Road</option>
-	    <option value="Sevcon">Sevcon</option>
-	    <option value="Spectra">Spectra</option>
-	    <option value="Sugar Rush">Sugar Rush</option>
-	    <option value="Tension">Tension</option>
-	    <option value="Termination Shock">Termination Shock</option>
-	    <option value="The Art of War">The Art of War</option>
-	    <option value="The Lunar Whale">The Lunar Whale</option>
-      <option value="Till It's Over">Till It's Over</option>
-      <option value="Tokyo Skies">Tokyo Skies</option>
-      <option value="Try This">Try This</option>
-      <option value="Unlocked">Unlocked</option>
-      <option value="Vindicate Me">Vindicate Me</option>
-      <option value="Wicked">Wicked</option>
+	    <option value="Barracuda">Barracuda (ID 00)</option>
+	    <option value="Cascade">Cascade (ID 01)</option>
+	    <option value="Cheat Codes">Cheat Codes (ID 02)</option>
+	    <option value="Checkpoint">Checkpoint (ID 03)</option>
+	    <option value="Chip Zeal">Chip Zeal (ID 04)</option>
+	    <option value="Chronos">Chronos (ID 05)</option>
+	    <option value="Commando Steve">Commando Steve (ID 06)</option>
+	    <option value="Cool Friends">Cool Friends (ID 07)</option>
+	    <option value="Core">Core (ID 08)</option>
+	    <option value="Corrupted">Corrupted (ID 09)</option>
+	    <option value="Courtesy">Courtesy (ID 10)</option>
+	    <option value="Cruise Control">Cruise Control (ID 11)</option>
+	    <option value="Dance of the Incognizant">Dance of the Incognizant (ID 12)</option>
+	    <option value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole (ID 13)</option>
+	    <option value="Destroid 8 - Annihilate">Destroid 8 - Annihilate (ID 14)</option>
+	    <option value="Final Boss">Final Boss (ID 15)</option>
+	    <option value="Focus">Focus (ID 16)</option>
+	    <option value="FOX">FOX (ID 17)</option>
+	    <option value="FTW">FTW (ID 18)</option>
+	    <option value="Houston">Houston (ID 19)</option>
+	    <option value="HYPE">HYPE (ID 20)</option>
+	    <option value="Into The Zone">Into The Zone (ID 21)</option>
+	    <option value="Legacy">Legacy (ID 22)</option>
+	    <option value="Logic Gatekeeper">Logic Gatekeeper (ID 23)</option>
+	    <option value="Long Live The New Fresh">Long Live The New Fresh (ID 24)</option>
+	    <option value="Milky Ways">Milky Ways (ID 25)</option>
+	    <option value="New Game">New Game (ID 26)</option>
+	    <option value="On The Run">On The Run (ID 27)</option>
+	    <option value="Once Again">Once Again (ID 28)</option>
+	    <option value="Otis">Otis (ID 29)</option>
+	    <option value="Paper Dolls">Paper Dolls (ID 30)</option>
+	    <option value="Parallel Processing">Parallel Processing (ID 31)</option>
+	    <option value="Peer Gynt">Peer Gynt (ID 32)</option>
+	    <option value="Rainbow Road">Rainbow Road (ID 33)</option>
+	    <option value="Sevcon">Sevcon (ID 34)</option>
+	    <option value="Spectra">Spectra (ID 35)</option>
+	    <option value="Sugar Rush">Sugar Rush (ID 36)</option>
+	    <option value="Tension">Tension (ID 37)</option>
+	    <option value="Termination Shock">Termination Shock (ID 38)</option>
+	    <option value="The Art of War">The Art of War (ID 39)</option>
+	    <option value="The Lunar Whale">The Lunar Whale (ID 40)</option>
+      <option value="Till It's Over">Till It's Over (ID 41)</option>
+      <option value="Tokyo Skies">Tokyo Skies (ID 42)</option>
+      <option value="Try This">Try This (ID 43)</option>
+      <option value="Unlocked">Unlocked (ID 44)</option>
+      <option value="Vindicate Me">Vindicate Me (ID 45)</option>
+      <option value="Wicked">Wicked (ID 46)</option>
     </select><br>
 		<button onclick="toggle()" id="playBtn">Play</button>
 		<button onclick="nextSong()">
@@ -124,6 +124,75 @@
 			var index = (document.getElementById("song").selectedIndex) - 1;
 			var lenElem = document.getElementById("length");
 			switch (index) {
+				case 6: case 25:
+					document.getElementById("album").href = "Album-Art/Music Albums/Caps On, Hats Off.jpg";
+					break;
+				case 3:
+					document.getElementById("album").href = "Album-Art/Music Albums/Checkpoint.jpg";
+					break;
+				case 7:
+					document.getElementById("album").href = "Album-Art/Music Albums/Cool Friends.jpg";
+					break;
+				case 38:
+					document.getElementById("album").href = "Album-Art/Music Albums/Digital Disconnect.jpg";
+					break;
+				case 17: case 27:
+					document.getElementById("album").href = "Album-Art/Music Albums/Dimensions.jpg";
+					break;
+				case 1:
+					document.getElementById("album").href = "Album-Art/Music Albums/Ember.jpg";
+					break;
+				case 15:
+					document.getElementById("album").href = "Album-Art/Music Albums/Final Boss.jpg";
+					break;
+				case 8: case 11: case 37:
+					document.getElementById("album").href = "Album-Art/Music Albums/Ground Zero.jpg";
+					break;
+				case 24:
+					document.getElementById("album").href = "Album-Art/Music Albums/Lunaria.jpg";
+					break;
+				case 26:
+					document.getElementById("album").href = "Album-Art/Music Albums/Monstercat - Best of 2014.jpg";
+					break;
+				case 36:
+					document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 014 - Discovery.jpg";
+					break;
+				case 18: case 28: case 33: case 41:
+					document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 016 - Expedition.jpg";
+					break;
+				case 2:
+					document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 017 - Ascension.jpg";
+					break;
+				case 0:
+					document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 022 - Contact.jpg";
+					break;
+				case 5: case 9: case 22: case 23: case 31: case 40:
+					document.getElementById("album").href = "Album-Art/Music Albums/Parallel Processing.jpg";
+					break;
+				case 35: case 39: case 42:
+					document.getElementById("album").href = "Album-Art/Music Albums/Spectra.jpg";
+					break;
+				case 10: case 16: case 29:
+					document.getElementById("album").href = "Album-Art/Music Albums/Super Hexagon EP.jpg";
+					break;
+				case 21:
+					document.getElementById("album").href = "Album-Art/Music Albums/The Arcade Dream.jpg";
+					break;
+				case 4: case 19: case 34: case 45:
+					document.getElementById("album").href = "Album-Art/Music Albums/The Glory Days.jpg";
+					break;
+				case 13: case 14:
+					document.getElementById("album").href = "Album-Art/Music Albums/The Invasion.jpg";
+					break;
+				case 43:
+					document.getElementById("album").href = "Album-Art/Music Albums/Try This.jpg";
+					break;
+				case 12:
+					document.getElementById("album").href = "Album-Art/Music Albums/Ultimate Collection.jpg";
+					break;
+				case 20: case 30: case 32: case 44: case 46:
+					document.getElementById("album").href = "Album-Art/Music Albums/Unknown.jpg";
+					break;
 			}
 			switch (index) {
 				case 0:
