--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 		<div>- by -</div>
 		<h2 id="artist">&nbsp;</h2>
 		<div>
-			<span id="currentPos">0:00</span><progress value="0" max="1" id="progress"></progress><span id="length">0:00</span>
+			<span id="currentPos">0:00</span><progress value="0" max="1" id="progress"></progress><span id="length">0:00</span><br>
+			<span style="display: inline-block; width: 480px; height: 480px; background-image: url(Unknown.jpg);" id="albumImg"></span>
 		</div>
   </body>
 	<script>
@@ -149,7 +150,7 @@
 					document.getElementById("album").href = "Album-Art/Music Albums/Ground Zero.jpg";
 					break;
 				case 24:
-					document.getElementById("album").href = "Album-Art/Music Albums/Lunaria.jpg";
+					document.getElementById("album").href = "Album-Art/Music Albums/Lunaria.JPG";
 					break;
 				case 26:
 					document.getElementById("album").href = "Album-Art/Music Albums/Monstercat - Best of 2014.jpg";
@@ -194,6 +195,7 @@
 					document.getElementById("album").href = "Album-Art/Music Albums/Unknown.jpg";
 					break;
 			}
+			document.getElementById("albumImg").style.backgroundImage = "url(" + document.getElementById("album").href + ")";
 			switch (index) {
 				case 0:
 					artist.innerHTML = "Noisestorm";
