--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<h2 id="artist">&nbsp;</h2>
 		<div>
 			<span id="currentPos">0:00</span><progress value="0" max="1" id="progress"></progress><span id="length">0:00</span><br>
-			<span style="display: inline-block; width: 480px; height: 480px; background-image: url(Unknown.jpg);" id="albumImg"></span>
+			<span style="display: inline-block; width: 320px; height: 320px; background-image: url(Unknown.jpg); background-size: 320px 320px;" id="albumImg"></span>
 		</div>
   </body>
 	<script>
