--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			}
 			button {
 				height: 50px;
-				width: 50px;
+				min-width: 50px;
+				border-radius: 0;
 			}
 			h1 {font-weight: 900; font-size: 60px; margin: 0; text-align: center;}
 			h2 {font-weight: 600; font-size: 40px; margin: 0; text-align: center;}
