--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 				font-family: Montserrat;
 			}
 			button {
+				-webkit-appearance: none;
+				border: 1px solid black;
 				height: 50px;
 				min-width: 50px;
 				border-radius: 0;
