--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				display: inline-block;
 				font-family: Overlock;
 				width: 13%;
-				font-size: 24px;
+				font-size: 20px;
 			}
 			#currentPos {text-align: right;}
 			#length {text-align: left;}
-			progress {-webkit-appearance: none; width: 73%; height: 30px; position: relative; top: 2px;}
+			progress {-webkit-appearance: none; width: 73%; height: 20px;}
 			progress::-webkit-progress-bar {background: white; border: 1px solid black;}
 			progress::-webkit-progress-value {background: black;}
 			#albumImg {
@@ -109,11 +109,11 @@
 					<polyline style="stroke: none; fill: black;" points="5,5 10,5 10,35 5,35 5,5" />
 				</svg>
 			</button>
-			<button onclick="skip(-15)" style="position: relative; top: -21px;">Rewind<br>15 sec</button>
-			<button onclick="skip(-5)" style="position: relative; top: -21px;">Rewind<br>5 sec</button>
+			<button onclick="skip(-15)" style="position: relative; top: -22px;">Rewind<br>15 sec</button>
+			<button onclick="skip(-5)" style="position: relative; top: -22px;">Rewind<br>5 sec</button>
 			<button onclick="toggle()" style="position: relative; top: -14px;">Play/Pause</button>
-			<button onclick="skip(5)" style="position: relative; top: -21px;">Skip<br>5 sec</button>
-			<button onclick="skip(15)" style="position: relative; top: -21px;">Skip<br>15 sec</button>
+			<button onclick="skip(5)" style="position: relative; top: -22px;">Skip<br>5 sec</button>
+			<button onclick="skip(15)" style="position: relative; top: -22px;">Skip<br>15 sec</button>
 			<button onclick="nextSong()">
 				<svg width="40" height="40">
 					<polyline style="stroke: none; fill: black;" points="5,5 30,20 5,35 5,5" />
